syntax = "proto3";

package angel.serving;
option java_multiple_files = false;
option java_package = "com.tencent.angel.serving.apis.modelmgr";
option java_outer_classname = "ModelManagement";

import "config/model_server_config.proto";
import "apis/modelmgr/status.proto";

message ReloadConfigRequest {
  ModelServerConfig config = 1;
}

message ReloadConfigResponse {
  StatusProto status = 1;
}
